# open-codelabs

./: .env  .env.sample  .gitignore  404.html  AGENTS.md  DEPLOY_FIREBASE.md  DEPLOY_GCP.md  GEMINI.md  README.ja.md  README.ko.md  README.md  README.zh.md  database.rules.json  docker-compose.images.yml  docker-compose.postgres.yml  docker-compose.yml  firebase.json  firestore.indexes.json  firestore.rules  index.html  mkdocs.yml  requirements.txt  run-public.sh  sitemap.xml
backend/: .env.sample  BENCHMARK_LOCAL.md  Cargo.toml  Dockerfile
backend/bench/: ai_mode_ablation.py  analyze_paper_stats.py  frontend_render_bench.py  matrix.paper.csv  matrix.quick.csv  plot_paper.py  run_all_local.sh  run_matrix.sh  soak_bench.py  swe_metrics.py
backend/bench-results/: codeserver-fix-check.json  smoke.json
backend/bench-results/all-20260218-232745/: run-metadata.json
backend/bench-results/all-20260218-232826/: run-metadata.json
backend/bench-results/all-20260218-233027/: run-metadata.json
backend/bench-results/all-20260218-233617/: run-metadata.json
backend/bench-results/all-20260219-181236/: run-metadata.json
backend/bench-results/all-20260219-181719/: run-metadata.json
backend/bench-results/all-20260219-181943/: run-metadata.json
backend/bench-results/all-20260219-182501/: run-metadata.json  stage-status.csv
backend/bench-results/all-20260219-184314/: run-metadata.json  stage-status.csv
backend/bench-results/all-20260219-185159/: run-metadata.json  stage-status.csv
backend/bench-results/matrix-dryrun/: matrix.csv  (+2 more)
backend/data/: bench.sqlite  eval-repeats.sqlite  sqlite.db
backend/migrations/: 20250101000000_create_feedback.sql  20250102000000_add_attendee_feedback.sql  20251226161500_init.sql  20251226161600_attendees.sql  20251226161700_chat_enhancements.sql  20251227160000_create_feedback.sql  20251227162000_add_is_public_to_codelabs.sql  20251229150000_add_materials.sql  20251229161000_quizzes.sql  20251230120000_quiz_submissions.sql  20251231120000_add_guide_to_codelabs.sql  20251231130000_submissions.sql  20260102090000_audit_logs.sql  20260129000000_codeserver_containers.sql  20260129100000_add_workspace_structure_type.sql  20260130000000_add_email_to_attendees.sql  20260130010000_ai_conversations.sql  20260204204500_add_usage_metadata_to_ai_messages.sql  20260208090000_submission_links.sql  20260209210000_add_multiple_answers_to_quizzes.sql  20260213200000_inline_comments.sql
backend/migrations-postgres/: 20251226161500_init.sql  20251226161600_attendees.sql  20251227001500_attendee_progress.sql  20251227160000_create_feedback.sql  20251229150000_add_materials.sql  20251229160000_add_completion_to_attendees.sql  20251229161000_quizzes.sql  20251230113000_add_quiz_type.sql  20251230120000_quiz_submissions.sql  20251231130000_submissions.sql  20260102090000_audit_logs.sql  20260129000000_codeserver_containers.sql  20260129100000_add_workspace_structure_type.sql  20260202100000_ai_threads.sql  20260208203903_add_sender_id_to_chat_messages.sql  20260209210000_add_multiple_answers_to_quizzes.sql  20260209221500_add_require_submission_to_codelabs.sql  20260213200000_inline_comments.sql  20260307190000_cli_auth_requests.sql
backend/src/: lib.rs  main.rs  models.rs  state.rs
backend/tests/: api_tests.rs  visibility_test.rs
(+531 files in other folders)
