[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "any", "macros", "migrate", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }
dotenvy = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }
tempfile = "3.10"
axum-extra = { version = "0.12.3", features = ["multipart", "cookie"] }
cookie = "0.18"
dashmap = "6.0"
futures-util = "0.3"
image = "0.25.9"
reqwest = { version = "0.13.1", features = ["json", "stream", "multipart"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"] }
jsonwebtoken = "9.3.0"
rand = "0.8.5"
subtle = "2.6.1"
url = "2.5.4"
aes = "0.8.4"
base64 = "0.22.1"
cbc = "0.1.2"
cipher = "0.4.4"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
bollard = "0.18"
tar = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "backend"
path = "src/main.rs"
test = false

[[bin]]
name = "local_bench"
path = "src/bin/local_bench.rs"
test = false

[[bin]]
name = "ops_bench"
path = "src/bin/ops_bench.rs"
test = false

[[bin]]
name = "ws_bench"
path = "src/bin/ws_bench.rs"
test = false
